--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h3>Welcome to GitHub Pages.</h3>
+          <h3>Welcome to My Developer Log.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>I'll be posting quirks with technology that I find as I develop. The current project is updating an IE-targeted webapp to be compatabile with Chrome and Firefox.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
