--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ layout: default
 
 
 {% for post in site.posts limit:5 %}
-  <div class="post_title"><a href="/devlog/{{ url }}">{{title}}</a></div>
+  <div class="post_title"><a href="/devlog/{{ post.url }}">{{post.title}}</a></div>
   {{ post.content }}
 
-      {{content}}
+
 	  <p class="signoff">
 	    {{ post.date | date: "%b %d, %Y" }}
 	  </p>
-	  </div>
+
 {% endfor %}
