--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 
 
-{% for post in site.posts limit:5 %}
+{% for post in paginator.posts %}
   <div class="post_title"><a href="/devlog{{ post.url }}">{{post.title}}</a></div>
 
   {{ post.content }}
@@ -16,3 +16,31 @@ layout: default
 	  </p>
 
 {% endfor %}
+
+<div class="pagination-container">
+	{% if paginator.total_pages > 1 %}
+	<div class="pagination">
+	  {% if paginator.previous_page %}
+	    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+	  {% else %}
+	    <span>&laquo; Prev</span>
+	  {% endif %}
+
+	  {% for page in (1..paginator.total_pages) %}
+	    {% if page == paginator.page %}
+	      <strong>{{ page }}</strong>
+	    {% elsif page == 1 %}
+	      <a href="{{ '/index.html' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
+	    {% else %}
+	      <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+	    {% endif %}
+	  {% endfor %}
+
+	  {% if paginator.next_page %}
+	    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+	  {% else %}
+	    <span>Next &raquo;</span>
+	  {% endif %}
+	</div>
+	{% endif %}
+</div>
